tests/sksl/errors/BadCaps.dsl.glsl
### Compilation failed:

error: unknown capability flag 'bugFreeDriver'

1 error
